--- a/manifest-firefox.json
+++ b/manifest-firefox.json
@@ -1,15 +1,23 @@
 {
   "manifest_version": 2,
   "name": "小红书笔记搬运助手",
-  "version": "1.0.21",
+  "version": "1.0.22",
   "description": "自动提取小红书笔记内容，支持标题、正文、图片下载和结构化数据导出",
   "permissions": [
     "activeTab",
     "storage",
     "downloads",
     "https://www.xiaohongshu.com/*",
-    "https://www.reddit.com/*"
+    "https://www.reddit.com/*",
+    "https://sns-webpic-qc.xhscdn.com/*",
+    "https://*.xhscdn.com/*"
   ],
+  "background": {
+    "scripts": [
+      "background.js"
+    ],
+    "persistent": false
+  },
   "content_scripts": [
     {
       "matches": [
