--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "manifest_version": 3,
   "name": "小红书笔记搬运助手",
-  "version": "1.0.20",
+  "version": "1.0.21",
   "description": "自动提取小红书笔记内容，支持标题、正文和图片下载",
   "permissions": [
     "activeTab",
@@ -11,8 +11,13 @@
   ],
   "host_permissions": [
     "https://www.xiaohongshu.com/*",
-    "https://www.reddit.com/*"
+    "https://www.reddit.com/*",
+    "https://sns-webpic-qc.xhscdn.com/*",
+    "https://*.xhscdn.com/*"
   ],
+  "background": {
+    "service_worker": "background.js"
+  },
   "content_scripts": [
     {
       "matches": [
