chore: 版本号更新

--- a/manifest-firefox.json
+++ b/manifest-firefox.json
@@ -1,12 +1,13 @@
 {
   "manifest_version": 2,
   "name": "小红书笔记搬运助手",
-  "version": "1.0.24",
+  "version": "1.0.50",
   "description": "自动提取小红书笔记内容，支持标题、正文、图片下载和结构化数据导出",
   "permissions": [
     "activeTab",
     "storage",
     "downloads",
+    "clipboardWrite",
     "https://www.xiaohongshu.com/*",
     "https://www.reddit.com/*",
     "https://sns-webpic-qc.xhscdn.com/*",
