🔧 重构AI润色功能：将prompt提取到独立配置文件
- 新增 prompts.json 配置文件，便于修改AI润色提示词
- 重构 buildPolishPrompt 方法，支持从配置文件加载prompt模板
- 添加 loadPromptConfig 和 getDefaultPromptConfig 方法
- 更新 manifest.json 和 manifest-firefox.json，添加配置文件访问权限
- 提升代码可维护性，方便用户自定义prompt内容

--- a/manifest-firefox.json
+++ b/manifest-firefox.json
@@ -49,6 +49,7 @@
     "128": "images/icon.svg"
   },
   "web_accessible_resources": [
-    "images/icon.svg"
+    "images/icon.svg",
+    "prompts.json"
   ]
 }
