--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "manifest_version": 3,
   "name": "小红书笔记搬运助手",
-  "version": "1.0.69",
+  "version": "1.0.68",
   "description": "自动提取小红书笔记内容，支持标题、正文和图片下载",
   "permissions": [
     "activeTab",
@@ -50,7 +50,8 @@
     {
       "resources": [
         "floating-panel.html",
-        "styles/*"
+        "styles/*",
+        "prompts.json"
       ],
       "matches": [
         "https://www.xiaohongshu.com/*",
